dh-cargo (7) UNRELEASED; urgency=medium

  * Be more verbose, as recommended by Policy.
  * Update to latest Standards-Version.
  * Set CARGO_TARGET_DIR so build products are saved.

 -- Ximin Luo <infinity0@debian.org>  Sat, 04 Aug 2018 11:33:36 -0700

dh-cargo (6) unstable; urgency=medium

  * Don't add .pc directories to binary package, but do add debian/patches.
    (Closes: #880689)

 -- Ximin Luo <infinity0@debian.org>  Sat, 30 Jun 2018 17:16:36 -0700

dh-cargo (5) unstable; urgency=medium

  * Pass `--cap-lints warn` in rustflags to avoid builds breaking when rustc
    adds new warnings.
  * Work around a stupid ftpmaster rule about files with old dates.

 -- Ximin Luo <infinity0@debian.org>  Mon, 18 Jun 2018 00:58:48 -0700

dh-cargo (4) unstable; urgency=medium

  * Pass cargo-version not Debian-version to `cargo install`.
  * Pass debuginfo=2 and LDFLAGS when building.
  * Add other flags to support cross-compiling.

 -- Ximin Luo <infinity0@debian.org>  Fri, 08 Jun 2018 00:18:42 -0700

dh-cargo (3) unstable; urgency=medium

  * Update to latest Standards-Version; no changes required.
  * Run `cargo build` during dh_auto_test to check that each library package
    actually builds, e.g. to ensure that any non-rust system dependencies were
    correctly expressed.

 -- Ximin Luo <infinity0@debian.org>  Mon, 26 Mar 2018 23:20:40 +0200

dh-cargo (2) unstable; urgency=medium

  [ Josh Triplett ]
  * Update package description with additional documentation.

  [ Ximin Luo ]
  * Upload to unstable.

 -- Ximin Luo <infinity0@debian.org>  Sat, 10 Jun 2017 22:33:08 +0200

dh-cargo (1) experimental; urgency=medium

  * Initial Release.

 -- Josh Triplett <josh@joshtriplett.org>  Mon, 21 Nov 2016 06:24:51 -0800